Main header file separated.
Signed-off-by: Paul <win10@list.ru>

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -8,11 +8,6 @@ file(GLOB SOURCES
         ./src/windows/*.c
         )
 
-#file(GLOB c-rogue_SRC
-#        "/src/*.c"
-#        "/include/*.h"
-#        )
-
 add_executable(c-rogue ${SOURCES})
 
-target_link_libraries(${PROJECT_NAME} ncurses)
+target_link_libraries(${PROJECT_NAME} menu ncurses)
